# pb-cpp-library-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pb-cpp-library-template.code-workspace
docs/: readme.md
include/pb/: library.h
src/: library.cpp
test/: DummyTest.cpp
test/resource/: test.properties
